added some references and fix some parts of text (until aflnet introduction)

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -32,3 +32,28 @@ title={Forkfuzz: Leveraging the Fork-Awareness in Coverage-Guided Fuzzing},
 author={Marcello Maugeri and Cristian Daniele and Giampaolo Bella},
 booktitle={Computer Security. ESORICS 2023 International Workshops: CPS4CIP, ADIoT, SecAssure, WASP, TAURIN, PriST-AI, and SECAI, The Hague, The Netherlands, September 25--29, 2023, Revised Selected Papers, Part II},
 year={2023},}
+
+@inproceedings{driller,
+author = {Stephens, Nick and Grosen, John and Salls, Christopher and Dutcher, Andrew and Wang, Ruoyu and Corbetta, Jacopo and Shoshitaishvili, Yan and Kruegel, Christopher and Vigna, Giovanni},
+year = {2016},
+title = {Driller: Augmenting Fuzzing Through Selective Symbolic Execution},}
+
+@article{sage,
+author = {Godefroid, P. and Levin, M.Y. and Molnar, D.},
+year = {2012},
+title = {SAGE: Whitebox fuzzing for security testing: SAGE has had a remarkable impact at Microsoft},}
+
+@inproceedings{ossfuzz,
+author = {Ding, Zhen Yu and Goues, Claire},
+year = {2021},
+title = {An Empirical Study of OSS-Fuzz Bugs},}
+
+@article{statefulfuzzing,
+author = {Daniele, Cristian and Andarzian, Seyed and Poll, Erik},
+year = {2024},
+title = {Fuzzers for Stateful Systems: Survey and Research Directions},}
+
+@inproceedings{libafl,
+author = {Fioraldi, Andrea and Maier, Dominik and Zhang, Dongjia and Balzarotti, Davide},
+year = {2022},
+title = {LibAFL: A Framework to Build Modular and Reusable Fuzzers},}
