--- a/latex_thesis/parts/conclusion.tex
+++ b/latex_thesis/parts/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusion} 
 This thesis explored the effectiveness of three stateful fuzzing tools—Fallaway, AFLNet, and ChatAFL—when applied to the Lighttpd web server. The study aimed to evaluate each tool's focusing on aspects like coverage, efficiency, and adaptability.
-\\\\We discussed the importance of stateful fuzzing, particularly for applications where internal states and state transitions significantly impact behavior, such as web servers and network-based applications. Stateful fuzzing techniques were shown to be crucial in effectively testing these SUTs, as they consider the influence of previous interactions on the application's current state.
+\\\\Has been discussed the importance of stateful fuzzing, particularly for applications where internal states and state transitions significantly impact behavior, such as web servers and network-based applications. Stateful fuzzing techniques were shown to be crucial in effectively testing these SUTs, as they consider the influence of previous interactions on the application's current state.
 \\\\The research also involved comparing the setup processes for each fuzzer. Each tool required a different configuration and environment setup to achieve optimal performance. For instance, Fallaway's modifications to Lighttpd required a persistent mode for maintaining server states across multiple requests, while AFLNet and ChatAFL leveraged network protocol benchmarks to facilitate efficient fuzzing.
 \\\\Additionally, various graphs were presented to illustrate the comparative results of the fuzzers. These showed differences in execution counts, code coverage achieved over time, and other performance metrics, providing a clearer understanding of how each tool behaves in different scenarios.
 \\\\Through experimentation, it was found that each fuzzer employs a distinct approach to address the challenges of testing applications with complex internal states. 
