addedd some references and fix some text

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -48,12 +48,37 @@ author = {Ding, Zhen Yu and Goues, Claire},
 year = {2021},
 title = {An Empirical Study of OSS-Fuzz Bugs},}
 
-@article{statefulfuzzing,
+@article{statefulfuzzingcristian,
 author = {Daniele, Cristian and Andarzian, Seyed and Poll, Erik},
 year = {2024},
 title = {Fuzzers for Stateful Systems: Survey and Research Directions},}
+
+@unknown{statefulfuzzingchallenges,
+author = {Daniele, Cristian},
+year = {2024},
+title = {Is Stateful Fuzzing Really Challenging?}}
+
+@unknown{statefulfuzzing,
+author = {Ba, Jinsheng and Böhme, Marcel and Mirzamomen, Zahra and Roychoudhury, Abhik},
+year = {2022},
+title = {Stateful Greybox Fuzzing},}
 
 @inproceedings{libafl,
 author = {Fioraldi, Andrea and Maier, Dominik and Zhang, Dongjia and Balzarotti, Davide},
 year = {2022},
 title = {LibAFL: A Framework to Build Modular and Reusable Fuzzers},}
+
+@ARTICLE{theartoffuzzing,
+author={Manès, Valentin J.M. and Han, HyungSeok and Han, Choongwoo and Cha, Sang Kil and Egele, Manuel and Schwartz, Edward J. and Woo, Maverick},
+title={The Art, Science, and Engineering of Fuzzing: A Survey}, 
+year={2021},}
+
+@misc{minaee2024largelanguagemodelssurvey,
+title={Large Language Models: A Survey}, 
+author={Shervin Minaee and Tomas Mikolov and Narjes Nikzad and Meysam Chenaghlu and Richard Socher and Xavier Amatriain and Jianfeng Gao},
+year={2024},}
+
+@article{fuzzingprogresschallenges,
+author = {Yu, Zhenhua and Liu, Zhengqi and Cong, Xuya and Li, Xiaobo and Yin, Li},
+year = {2024},
+title = {Fuzzing: Progress, Challenges, and Perspectives},}
