--- a/latex_thesis/document.tex
+++ b/latex_thesis/document.tex
@@ -76,5 +76,5 @@
 \addcontentsline{toc}{chapter}{References}
 \bibliography{bibliography}
 
-\input{parts/greetings}
+% \input{parts/greetings}
 \end{document}
