fixed citation with ~

--- a/latex_thesis/parts/chapter1.tex
+++ b/latex_thesis/parts/chapter1.tex
@@ -4,11 +4,11 @@ As the software systems are getting increasingly complex, ensuring their robustn
 \\The evolution of fuzzing methodologies has significantly enhanced their effectiveness for a wide range of applications, such as:
 %TODO: Add real references to the following examples
 \begin{itemize}
-    \item Google Chrome's \textbf{ClusterFuzz}, which has been instrumental in identifying thousands of security vulnerabilities in the Chrome browser (\textit{An Empirical Study of OSS-Fuzz Bugs \cite{ossfuzz}}).
-    \item \textbf{SAGE}, which has been used to identify vulnerabilities in Windows (\textit{SAGE: Whitebox fuzzing for security testing \cite{sage}}).
-    \item \textbf{Driller}, which has been used to identify vulnerabilities in the DARPA Cyber Grand Challenge (\textit{Driller: Augmenting Fuzzing Through Selective Symbolic Execution \cite{driller}}).
+    \item Google Chrome's \textbf{ClusterFuzz}, which has been instrumental in identifying thousands of security vulnerabilities in the Chrome browser ~\cite{ossfuzz}.
+    \item \textbf{SAGE}, which has been used to identify vulnerabilities in Windows ~\cite{sage}.
+    \item \textbf{Driller}, which has been used to identify vulnerabilities in the DARPA Cyber Grand Challenge ~\cite{driller}.
 \end{itemize}
-Traditional fuzzers typically focus on generating random inputs and observing the software responses. However, for applications that maintain internal states across several interactions, such as web servers or networked applications, this approach can be insufficient (\textit{Is Stateful Fuzzing Really Challenging? \cite{statefulfuzzingchallenges}}). These stateful applications call for more sophisticated fuzzing techniques that take into account the interaction between different states and transitions.
+Traditional fuzzers typically focus on generating random inputs and observing the software responses. However, for applications that maintain internal states across several interactions, such as web servers or networked applications, this approach can be insufficient ~\cite{statefulfuzzingchallenges}. These stateful applications call for more sophisticated fuzzing techniques that take into account the interaction between different states and transitions.
 \\\textit{Stateful fuzzing} is an advanced approach for solving the problems of applications that rely on state management. Whereas in \textit{stateless fuzzing}, each input is considered a unique event, stateful fuzzing emulates the flow of activities along with the succeeding changes in the state of an application. It includes the generation of inputs which consider previous interactions and what these have done to the state of the application, hence providing a more realistic and deeper testing process.
 \\An instance used in this thesis is \textbf{Lighttpd} (\textit{\href{https://github.com/lighttpd}{https://github.com/lighttpd}}), an \textit{open-source web server} recognized for its effectiveness and ability to scale, to manage a substantial number of concurrent connections. Assessing Lighttpd offers a chance to scrutinize stateful fuzzing methodologies.
 \\This thesis focuses on the benchmarking of stateful fuzzers to ascertain their efficiency in \textit{coverage} in Lighttpd. The reviewed stateful fuzzers are: \textbf{Fallaway}, \textbf{AFLNet} and \textbf{ChatAFL}. Each of them has a its own approach toward stateful fuzzing.
